--- a/DirectX12Engine.vcxproj
+++ b/DirectX12Engine.vcxproj
@@ -130,11 +130,16 @@
   <ItemGroup>
     <ClInclude Include="DirectX12Engine.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="IndexBuffer.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="VertexBuffer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DirectX12Engine.cpp" />
+    <ClCompile Include="IndexBuffer.cpp" />
+    <ClCompile Include="VertexBuffer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="DirectX12Engine.rc" />
