--- a/DirectX12Engine.vcxproj
+++ b/DirectX12Engine.vcxproj
@@ -130,6 +130,7 @@
   <ItemGroup>
     <ClInclude Include="DirectX12Engine.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="GPUBuffer.h" />
     <ClInclude Include="IndexBuffer.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
@@ -138,6 +139,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DirectX12Engine.cpp" />
+    <ClCompile Include="GPUBuffer.cpp" />
     <ClCompile Include="IndexBuffer.cpp" />
     <ClCompile Include="VertexBuffer.cpp" />
   </ItemGroup>
