--- a/DirectX12Engine.vcxproj
+++ b/DirectX12Engine.vcxproj
@@ -135,6 +135,7 @@
     <ClInclude Include="GPUBuffer.h" />
     <ClInclude Include="IndexBuffer.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="RWStructuredBuffer.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="StructuredBuffer.h" />
     <ClInclude Include="targetver.h" />
@@ -145,6 +146,7 @@
     <ClCompile Include="DirectX12Engine.cpp" />
     <ClCompile Include="GPUBuffer.cpp" />
     <ClCompile Include="IndexBuffer.cpp" />
+    <ClCompile Include="RWStructuredBuffer.cpp" />
     <ClCompile Include="StructuredBuffer.cpp" />
     <ClCompile Include="VertexBuffer.cpp" />
   </ItemGroup>
