--- a/DirectX12Engine.vcxproj.filters
+++ b/DirectX12Engine.vcxproj.filters
@@ -69,14 +69,14 @@
     <ClInclude Include="DescriptorHeap.h">
       <Filter>Resourceibinding</Filter>
     </ClInclude>
-    <ClInclude Include="PipelineState.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
     <ClInclude Include="RootSignature.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="PipelineState.h">
+      <Filter>Resourceibinding</Filter>
+    </ClInclude>
     <ClInclude Include="Shader.h">
-      <Filter>ヘッダー ファイル</Filter>
+      <Filter>Resourceibinding</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -107,14 +107,14 @@
     <ClCompile Include="DescriptorHeap.cpp">
       <Filter>Resourceibinding</Filter>
     </ClCompile>
-    <ClCompile Include="PipelineState.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
     <ClCompile Include="RootSignature.cpp">
-      <Filter>ソース ファイル</Filter>
+      <Filter>Resourceibinding</Filter>
+    </ClCompile>
+    <ClCompile Include="PipelineState.cpp">
+      <Filter>Resourceibinding</Filter>
     </ClCompile>
     <ClCompile Include="Shader.cpp">
-      <Filter>ソース ファイル</Filter>
+      <Filter>Resourceibinding</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
