--- a/packages.config
+++ b/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Assimp" version="3.0.0" targetFramework="native" />
+  <package id="Assimp.redist" version="3.0.0" targetFramework="native" />
   <package id="directxtk12_desktop_2019" version="2023.4.28.1" targetFramework="native" />
 </packages>
