--- a/DirectX11GraphicsEngine/DirectX11GraphicsEngine.vcxproj
+++ b/DirectX11GraphicsEngine/DirectX11GraphicsEngine.vcxproj
@@ -128,17 +128,17 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="IShaderResource.h" />
-    <ClInclude Include="stdafxh.h" />
-    <ClInclude Include="Texture.h" />
+    <ClInclude Include="stdafx.h" />
     <ClInclude Include="DirectX11GraphicsEngine.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="TextureDX11.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="IShaderResource.cpp" />
-    <ClCompile Include="Texture.cpp" />
     <ClCompile Include="DirectX11GraphicsEngine.cpp" />
+    <ClCompile Include="TextureDX11.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="DirectX11GraphicsEngine.rc" />
