--- a/DirectX12Engine.vcxproj
+++ b/DirectX12Engine.vcxproj
@@ -160,6 +160,7 @@
     <ClInclude Include="StructuredBuffer.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Texture.h" />
+    <ClInclude Include="TkaFile.h" />
     <ClInclude Include="TResourceBank.h" />
     <ClInclude Include="Vector.h" />
     <ClInclude Include="VertexBuffer.h" />
@@ -189,6 +190,7 @@
     <ClCompile Include="Skeleton.cpp" />
     <ClCompile Include="StructuredBuffer.cpp" />
     <ClCompile Include="Texture.cpp" />
+    <ClCompile Include="TkaFile.cpp" />
     <ClCompile Include="Vector.cpp" />
     <ClCompile Include="VertexBuffer.cpp" />
   </ItemGroup>
