--- a/DirectX12Engine.vcxproj
+++ b/DirectX12Engine.vcxproj
@@ -149,6 +149,9 @@
     <ClInclude Include="MeshParts.h" />
     <ClInclude Include="NullTextureMaps.h" />
     <ClInclude Include="PipelineState.h" />
+    <ClInclude Include="RayTracingPSO.h" />
+    <ClInclude Include="RaytracingWorld.h" />
+    <ClInclude Include="RayTracingInstance.h" />
     <ClInclude Include="RenderContext.h" />
     <ClInclude Include="RenderTarget.h" />
     <ClInclude Include="Resource.h" />
@@ -182,6 +185,9 @@
     <ClCompile Include="MeshParts.cpp" />
     <ClCompile Include="NullTexture.cpp" />
     <ClCompile Include="PipelineState.cpp" />
+    <ClCompile Include="RayTracingPSO.cpp" />
+    <ClCompile Include="RaytracingWorld.cpp" />
+    <ClCompile Include="RayTracingInstance.cpp" />
     <ClCompile Include="RenderContext.cpp" />
     <ClCompile Include="RenderTarget.cpp" />
     <ClCompile Include="RootSignature.cpp" />
