--- a/VulkanGraphicsEngine/VulkanGraphicsEngine.vcxproj
+++ b/VulkanGraphicsEngine/VulkanGraphicsEngine.vcxproj
@@ -133,12 +133,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="framework.h" />
+    <ClInclude Include="RenderingContext.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="VulkanGraphicsEngine.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="RenderingContext.cpp" />
     <ClCompile Include="VulkanGraphicsEngine.cpp" />
   </ItemGroup>
   <ItemGroup>
