--- a/VulkanGraphicsEngine/VulkanGraphicsEngine.vcxproj.filters
+++ b/VulkanGraphicsEngine/VulkanGraphicsEngine.vcxproj.filters
@@ -38,6 +38,9 @@
     <ClCompile Include="VulkanGraphicsEngine.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="RenderingContext.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="VulkanGraphicsEngine.rc">
