--- a/DirectX12Engine.vcxproj.filters
+++ b/DirectX12Engine.vcxproj.filters
@@ -135,10 +135,16 @@
     <ClInclude Include="RaytracingWorld.h">
       <Filter>raytracing</Filter>
     </ClInclude>
-    <ClInclude Include="RayTracingInstance.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
     <ClInclude Include="RayTracingPSO.h">
+      <Filter>raytracing</Filter>
+    </ClInclude>
+    <ClInclude Include="RayTracingInstance.h">
+      <Filter>raytracing</Filter>
+    </ClInclude>
+    <ClInclude Include="BLASBuffer.h">
+      <Filter>raytracing</Filter>
+    </ClInclude>
+    <ClInclude Include="Raytracing.h">
       <Filter>raytracing</Filter>
     </ClInclude>
   </ItemGroup>
@@ -227,10 +233,13 @@
     <ClCompile Include="RaytracingWorld.cpp">
       <Filter>raytracing</Filter>
     </ClCompile>
-    <ClCompile Include="RayTracingInstance.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
     <ClCompile Include="RayTracingPSO.cpp">
+      <Filter>raytracing</Filter>
+    </ClCompile>
+    <ClCompile Include="RayTracingInstance.cpp">
+      <Filter>raytracing</Filter>
+    </ClCompile>
+    <ClCompile Include="BLASBuffer.cpp">
       <Filter>raytracing</Filter>
     </ClCompile>
   </ItemGroup>
