--- a/DirectX12Engine.vcxproj
+++ b/DirectX12Engine.vcxproj
@@ -166,6 +166,7 @@
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="TkaFile.h" />
+    <ClInclude Include="TLASBuffer.h" />
     <ClInclude Include="TResourceBank.h" />
     <ClInclude Include="Vector.h" />
     <ClInclude Include="VertexBuffer.h" />
@@ -200,6 +201,7 @@
     <ClCompile Include="StructuredBuffer.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="TkaFile.cpp" />
+    <ClCompile Include="TLASBuffer.cpp" />
     <ClCompile Include="Vector.cpp" />
     <ClCompile Include="VertexBuffer.cpp" />
   </ItemGroup>
