--- a/DirectX12Engine.vcxproj.filters
+++ b/DirectX12Engine.vcxproj.filters
@@ -147,6 +147,9 @@
     <ClInclude Include="Raytracing.h">
       <Filter>raytracing</Filter>
     </ClInclude>
+    <ClInclude Include="TLASBuffer.h">
+      <Filter>raytracing</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DirectX12Engine.cpp">
@@ -240,6 +243,9 @@
       <Filter>raytracing</Filter>
     </ClCompile>
     <ClCompile Include="BLASBuffer.cpp">
+      <Filter>raytracing</Filter>
+    </ClCompile>
+    <ClCompile Include="TLASBuffer.cpp">
       <Filter>raytracing</Filter>
     </ClCompile>
   </ItemGroup>
