--- a/DirectX12Engine.vcxproj.filters
+++ b/DirectX12Engine.vcxproj.filters
@@ -159,6 +159,9 @@
     <ClInclude Include="MyAssert.h">
       <Filter>ソース ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="MiniEngine.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DirectX12Engine.cpp">
