--- a/VulkanGraphicsEngine/VulkanGraphicsEngine.vcxproj
+++ b/VulkanGraphicsEngine/VulkanGraphicsEngine.vcxproj
@@ -133,6 +133,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="framework.h" />
+    <ClInclude Include="Raytracing.h" />
     <ClInclude Include="RenderingContext.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
